src/tests/snapshots/rust_poker__tests__can_have_strflush__tests__cal_gaps21.snap
---
source: src/tests/can_have_strflush.rs
expression: blocked
---
Ok(
    [
        [
            [
                Card {
                    value: 4,
                    suit: S,
                },
                Card {
                    value: 3,
                    suit: S,
                },
            ],
        ],
    ],
)
