src/tests/snapshots/rust_poker__tests__can_have_strflush__tests__one_strflush.snap
---
source: src/tests/can_have_strflush.rs
expression: can_have
---
[
    (
        [
            Card {
                value: 4,
                suit: S,
            },
            Card {
                value: 3,
                suit: S,
            },
            Card {
                value: 2,
                suit: S,
            },
        ],
        [
            [
                Card {
                    value: 5,
                    suit: S,
                },
                Card {
                    value: 6,
                    suit: S,
                },
            ],
        ],
    ),
]
